# AutoClip-Pro

./: .env.example  .gitignore  README.md  pyproject.toml
Rule/: AGENT_WORKFLOW.md  AI_RULES.md  ARCHITECTURE.md  SYSTEM_PIPELINES.md
apps/api/: main.py
apps/api/routes/: clips.py  jobs.py
configs/: pipeline.yaml
core/config/: __init__.py
core/errors/: __init__.py
core/logging/: __init__.py
core/models/: __init__.py  clip.py  highlight.py  job.py  transcript.py  video.py
docs/: ARCHITECTURE.md  RELEASE_v0.2.0.md  SYSTEM_FLOW.md  USAGE_GUIDE.md
frontend/src/app/: globals.css  layout.js  page.js
frontend/src/app/jobs/: page.js
frontend/src/app/jobs/[id]/: page.js
infra/download/: ytdlp_downloader.py
infra/llm/: gemini_client.py  local_detector.py  openai_client.py
infra/speech/: whisper_engine.py
infra/subtitle/: srt_generator.py
infra/video/: auto_reframe.py  ffmpeg_editor.py
interfaces/: downloader.py  highlight_detector.py  speech_to_text.py  subtitle_generator.py  video_editor.py
pipelines/: clip_pipeline.py
services/: clip_service.py  highlight_service.py  subtitle_service.py  transcript_service.py  video_ingest_service.py
tests/unit/: test_core_services.py
